<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/bg_start_1"
        android:src="@drawable/background_start_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_start_1"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/Food_Ordering_A_04"
        android:layout_below="@+id/bg_start_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/tv_footer"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/Food_Ordering_A_03"
        android:textSize="20sp"
        android:background="@drawable/greenbuttongradient"
        android:layout_width="150dp"
        android:layout_height="57dp"/>

    <TextView
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:id="@+id/tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30sp"
        android:text="@string/footer"
        android:textSize="20sp" />

</RelativeLayout>